# rstack

./: .gitignore  Cargo.toml  README.md
.circleci/: config.yml
.github/workflows/: ci.yml
doc/: aliases.js  search-index.js  source-files.js
doc/dw/: all.html  index.html  sidebar-items.js
doc/dw/dwfl/: Callbacks.t.html  Dwfl.t.html  FindDebuginfo.t.html  FindElf.t.html  index.html  sidebar-items.js  struct.AddrInfo.html  struct.Callbacks.html  struct.Dwfl.html  struct.DwflRef.html  struct.Error.html  struct.FindDebuginfo.html  struct.FindElf.html  struct.FrameRef.html  struct.ModuleRef.html  struct.Report.html  struct.ThreadRef.html
doc/dw/elf/: index.html  sidebar-items.js  struct.Symbol.html
doc/dw_sys/: DWARF_CB_ABORT.v.html  DWARF_CB_OK.v.html  DWARF_C_READ.v.html  DWARF_C_WRITE.v.html  DWARF_END_ABBREV.v.html  DW_AT_GNU_all_call_sites.v.html  DW_AT_GNU_all_tail_call_sites.v.html  DW_AT_GNU_deleted.v.html  DW_AT_GNU_guarded.v.html  DW_AT_GNU_macros.v.html  DW_AT_GNU_pt_guarded_by.v.html  DW_AT_GNU_template_name.v.html  DW_AT_GNU_vector.v.html  DW_AT_MIPS_allocatable_dopetype.v.html  DW_AT_MIPS_assumed_size.v.html  DW_AT_MIPS_clone_origin.v.html  DW_AT_MIPS_epilog_begin.v.html  DW_AT_MIPS_has_inlines.v.html  DW_AT_MIPS_loop_begin.v.html  DW_AT_MIPS_loop_unroll_factor.v.html  DW_AT_MIPS_stride.v.html  DW_AT_abstract_origin.v.html  DW_AT_accessibility.v.html  DW_AT_allocated.v.html  DW_AT_associated.v.html  DW_AT_base_types.v.html  DW_AT_bit_offset.v.html  DW_AT_bit_size.v.html  DW_AT_body_begin.v.html  DW_AT_byte_stride.v.html  DW_AT_call_file.v.html  DW_AT_call_line.v.html  DW_AT_common_reference.v.html  DW_AT_comp_dir.v.html  DW_AT_const_value.v.html  DW_AT_containing_type.v.html  DW_AT_count.v.html  DW_AT_data_location.v.html  DW_AT_decl_column.v.html  DW_AT_decl_line.v.html  (+835 more)
doc/dw_sys/dwarf/: DW_AT_GNU_all_source_call_sites.v.html  DW_AT_GNU_call_site_data_value.v.html  DW_AT_GNU_call_site_target.v.html  DW_AT_GNU_call_site_target_clobbered.v.html  DW_AT_GNU_call_site_value.v.html  DW_AT_GNU_exclusive_locks_required.v.html  DW_AT_GNU_guarded_by.v.html  DW_AT_GNU_locks_excluded.v.html  DW_AT_GNU_odr_signature.v.html  DW_AT_GNU_pt_guarded.v.html  DW_AT_GNU_shared_locks_required.v.html  DW_AT_GNU_tail_call.v.html  DW_AT_MIPS_abstract_name.v.html  DW_AT_MIPS_assumed_shape_dopetype.v.html  DW_AT_MIPS_fde.v.html  DW_AT_MIPS_linkage_name.v.html  DW_AT_MIPS_ptr_dopetype.v.html  DW_AT_MIPS_software_pipeline_depth.v.html  DW_AT_MIPS_stride_byte.v.html  DW_AT_MIPS_stride_elem.v.html  DW_AT_MIPS_tail_loop_begin.v.html  DW_AT_address_class.v.html  DW_AT_artificial.v.html  DW_AT_binary_scale.v.html  DW_AT_bit_stride.v.html  DW_AT_body_end.v.html  DW_AT_byte_size.v.html  DW_AT_call_column.v.html  DW_AT_calling_convention.v.html  DW_AT_const_expr.v.html  (+294 more)
doc/rstack/: all.html  fn.trace.html  index.html  sidebar-items.js  struct.Error.html  struct.Frame.html  struct.Process.html  struct.Symbol.html  struct.Thread.html  struct.TraceOptions.html  type.Result.html
doc/rstack_self/: TraceOptions.t.html  all.html  child.v.html  fn.child.html  fn.trace.html  index.html  sidebar-items.js  struct.Error.html  struct.Frame.html  struct.Symbol.html  struct.Thread.html  struct.Trace.html  struct.TraceOptions.html  type.Result.html
doc/unwind/: Accessors.t.html  AddressSpace.t.html  AddressSpaceRef.t.html  Byteorder.t.html  PTraceState.t.html  PTraceStateRef.t.html  ProcedureInfo.t.html  ProcedureName.t.html  RegNum.t.html  all.html  index.html  sidebar-items.js  struct.Accessors.html  struct.AddressSpace.html  struct.AddressSpaceRef.html  struct.Byteorder.html  struct.Cursor.html  struct.Error.html  struct.PTraceState.html  struct.PTraceStateRef.html  struct.ProcedureInfo.html  struct.ProcedureName.html  struct.RegNum.html  type.Result.html
doc/unwind_sys/: UNW_EBADFRAME.v.html  UNW_EBADREG.v.html  UNW_EBADVERSION.v.html  UNW_EINVAL.v.html  UNW_EINVALIDIP.v.html  UNW_ENOINFO.v.html  UNW_ENOMEM.v.html  UNW_EREADONLYREG.v.html  UNW_ESTOPUNWIND.v.html  UNW_ESUCCESS.v.html  UNW_EUNSPEC.v.html  UNW_REG_EH.v.html  UNW_REG_IP.v.html  UNW_REG_LAST.v.html  UNW_REG_SP.v.html  UNW_TDEP_IP.v.html  UNW_TDEP_LAST_REG.v.html  UNW_TDEP_SP.v.html  UNW_X86_64_R10.v.html  UNW_X86_64_R12.v.html  UNW_X86_64_R13.v.html  UNW_X86_64_R15.v.html  UNW_X86_64_R8.v.html  UNW_X86_64_R9.v.html  UNW_X86_64_RBP.v.html  UNW_X86_64_RDI.v.html  UNW_X86_64_RIP.v.html  _UPT_accessors.v.html  _UPT_create.v.html  all.html  constant.UNW_EBADFRAME.html  constant.UNW_EBADREG.html  constant.UNW_EBADVERSION.html  constant.UNW_EINVAL.html  constant.UNW_EINVALIDIP.html  constant.UNW_ENOINFO.html  constant.UNW_ENOMEM.html  constant.UNW_EREADONLYREG.html  constant.UNW_ESTOPUNWIND.html  constant.UNW_ESUCCESS.html  (+91 more)
dw/: Cargo.toml
dw-sys/: Cargo.toml  build.rs
dw-sys/src/: dwarf.rs  lib.rs  libelf.rs
dw-sys/src/elfutils/: gelf.rs  libdw.rs  libdwelf.rs  libdwfl.rs  mod.rs
dw-systest/: Cargo.toml  build.rs
dw-systest/src/: main.rs
dw/src/: lib.rs  test.rs
dw/src/dw/: at.rs  attribute.rs  die.rs  error.rs  mod.rs  tag.rs
dw/src/dwfl/: callbacks.rs  dwfl.rs  dwfl_frame.rs  dwfl_thread.rs  error.rs  frame.rs  mod.rs  module.rs  thread.rs  thread_callbacks.rs
dw/src/elf/: elf.rs  mod.rs  symbol.rs
examples/: rstack.rs
rstack/: Cargo.toml
rstack-self/: Cargo.toml
rstack-self/examples/: basic.rs
rstack-self/src/: dylibs.rs  lib.rs
rstack/examples/: rstack.rs
rstack/src/: lib.rs
rstack/src/imp/: dw.rs  unwind.rs
rstack/test/capture-target/: Cargo.toml
rstack/test/capture-target/src/: main.rs
rstack/test/target-launcher/: Cargo.toml  build.rs
rstack/test/target-launcher/src/: lib.rs
src/: lib.rs  main.rs
symbolize/: Cargo.toml
symbolize/src/: lib.rs
systest/: Cargo.toml  build.rs
systest/src/: main.rs
unwind/: Cargo.toml  build.rs
unwind-sys/: Cargo.toml  build.rs
unwind-sys/src/: aarch64.rs  lib.rs  macros.rs  ptrace.rs  x86.rs  x86_64.rs
unwind-systest/: Cargo.toml  build.rs
unwind-systest/src/: main.rs
unwind/src/: lib.rs  x86_64.rs
unwind/tests/: test.rs
(+690 files in other folders)
