[package]
name = "rstack"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@palantir.com>"]

[dependencies]
libc = "0.2"
log = "0.3"

unwind = { path = "unwind", features = ["ptrace"] }

[dev-dependencies]
env_logger = "0.4"

[workspace]
members = [
    "systest",
    "unwind",
    "unwind-sys",
]
