[package]
name = "rstack-self"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]

[dependencies]
antidote = "1.0"
backtrace = "0.3"
lazy_static = "0.2"
libc = "0.2"
serde = "1.0"
serde_derive = "1.0"
bincode = "0.9"

rstack = { path = "../rstack" }

[dev-dependencies]
env_logger = "0.4"
