[package]
name = "rstack-self"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
description = "Stack traces of all threads of a process"
license = "MIT/Apache-2.0"
repository = "https://github.com/sfackler/rstack"
documentation = "https://sfackler.github.io/rstack/doc/rstack_self"
categories = ["api-bindings", "development-tools::debugging"]
keywords = ["stack", "backtrace", "stacktrace"]

[dependencies]
antidote = "1.0"
backtrace = "0.3"
lazy_static = "0.2"
libc = "0.2"
serde = "1.0"
serde_derive = "1.0"
bincode = "0.9"

rstack = { version = "0.1", path = "../rstack" }

[dev-dependencies]
env_logger = "0.4"
