[package]
name = "rstack-self"
version = "0.3.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
description = "Stack traces of all threads of a process"
license = "MIT/Apache-2.0"
repository = "https://github.com/sfackler/rstack"
documentation = "https://sfackler.github.io/rstack/doc/rstack_self"
categories = ["api-bindings", "development-tools::debugging"]
keywords = ["stack", "backtrace", "stacktrace"]

[features]
default = ["unwind"]
unwind = ["rstack/unwind"]
dw = ["rstack/dw"]

[dependencies]
antidote = "1.0"
backtrace = "0.3"
lazy_static = "1.0"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.0"

rstack = { version = "0.3.0", path = "../rstack", default-features = false }

[dev-dependencies]
env_logger = "0.11"
