[package]
name = "rstack"
version = "0.3.3"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
description = "Stack traces of remote processes"
license = "MIT/Apache-2.0"
repository = "https://github.com/sfackler/rstack"
documentation = "https://sfackler.github.io/rstack/doc/rstack"
categories = ["api-bindings", "development-tools::debugging"]
keywords = ["stack", "backtrace", "stacktrace"]

[features]
default = ["unwind"]
unwind = ["unwind_"]
dw = ["dw_", "lazy_static"]

[dependencies]
cfg-if = "1.0"
lazy_static = { version = "1.0", optional = true }
libc = "0.2"
log = "0.4"

dw_ = { package = "dw", version = "0.2", path = "../dw", optional = true }
unwind_ = { package = "unwind", version = "0.4", path = "../unwind", features = ["ptrace"], optional = true }
