[package]
name = "unwind-sys"
version = "0.1.3"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
links = "unwind"
description = "FFI bindings to libunwind"
license = "MIT/Apache-2.0"
repository = "https://github.com/sfackler/rstack"
documentation = "https://sfackler.github.io/rstack/doc/unwind_sys"
categories = ["external-ffi-bindings", "development-tools::debugging"]
keywords = ["stack", "backtrace", "stacktrace"]

[features]
ptrace = []

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"
